--- a/01_css/n-kou.css
+++ b/01_css/n-kou.css
@@ -483,7 +483,8 @@ figure {
 	padding:0 0 18px 0;
 	margin: 0 0 25px 0;
 	background-image:url("../02_images/line01_black01.png");
-	background-position: center bottom -27%;
+	background-position: center bottom;
+	background-size: 200px 1px;
 	background-repeat: no-repeat;
 }
 
@@ -686,8 +687,10 @@ figure {
 	padding:0 0 18px 0;
 	margin: 0 0 25px 0;
 	background-image:url("../02_images/line01_black01.png");
-	background-position: center bottom -40%;
+	background-position: center bottom;
+	background-size: 200px 1px;
 	background-repeat: no-repeat;
+	letter-spacing:0.6px;
 }
 
 .main-topic-3__common-2 {
@@ -825,7 +828,8 @@ figure {
 	padding:0 0 18px 0;
 	margin: 0 0 25px 0;
 	background-image:url("../02_images/line01_black01.png");
-	background-position: center bottom -35%;
+	background-position: center bottom;
+	background-size: 200px 1px;	
 	background-repeat: no-repeat;
 }
 
@@ -1032,7 +1036,8 @@ figure {
 	padding:0 0 18px 0;
 	margin: 0 0 80px 0;
 	background-image:url("../02_images/line01_black01.png");
-	background-position: center bottom -40%;
+	background-position: center bottom;
+	background-size: 200px 1px;
 	background-repeat: no-repeat;
 	position: relative;
 	z-index: 1;
@@ -1081,7 +1086,8 @@ figure {
 	padding:0 0 18px 0;
 	margin: 0 0 80px 0;
 	background-image:url("../02_images/line01_black01.png");
-	background-position: center bottom -40%;
+	background-position: center bottom;
+	background-size: 200px 1px;
 	background-repeat: no-repeat;
 	position: relative;
 }
