--- a/01_css/n-kou.css
+++ b/01_css/n-kou.css
@@ -392,8 +392,8 @@ figure {
     border-right: 8px solid transparent;
     border-bottom: 8px solid #181836;
     position: absolute;
-    top: -5px;
-    left: 178px;
+    top: -10%;
+    left: 14%;
 }
 
 #local-nav {
@@ -474,11 +474,11 @@ figure {
 .catchcopy:before{
 	content: "";
 	position: absolute;
-	left: 530px;
-	bottom: -5px;
+	left: 50%; /* px指定すると拡大縮小してしまう,%指定にすると固定される */
+	bottom: -9px;
 	width: 200px;
 	height: 1px;
-/* 	transform: translateX(-50%); */
+	transform: translateX(-100px); /* translate(移動効果),X軸への移動を設定,「%」でも設定できる */
 	background-color: #FFFFFF;
 }
 
