--- a/01_css/n-kou.css
+++ b/01_css/n-kou.css
@@ -19,13 +19,14 @@
   src: url("../fonts/7e908add-1f72-4926-8e0d-33613fad3a87.eot?#iefix") format("eot"), url("../fonts/d226afef-6536-4b18-9b28-defffcc4baae.woff2") format("woff2"), url("../fonts/6e9eb620-9339-4b2e-bb9b-d514def96de7.woff") format("woff"), url("../fonts/a71ba532-858c-440c-8abd-e89a2ae8efea.ttf") format("truetype"), url("../fonts/5d948218-1de1-4508-b1a6-fe03ccced886.svg#5d948218-1de1-4508-b1a6-fe03ccced886") format("svg");
 }
 
+
+
 #main {
   font-family: "AxisStd-Light", "メイリオ", "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
 #page-head {
   font-family: "AxisStd-Regular",sans-serif;
-
 }
 
 a {
@@ -103,10 +104,25 @@ figure {
 	text-decoration: underline;
 } 
 
-.page-head__intro ul li a img:hover {
-	text-decoration: underline;
-} 
 
+.loginlink {
+    background-color: #D9D9D9;
+    margin-left: 20px; 
+	position: relative;
+}
+
+.loginlink a:after {
+	background-image: url("../02_images/school-icon.png");
+	content:" ";
+	display:inline-block;
+	background-size: contain;
+	background-repeat: no-repeat;
+	position: absolute;
+    top: 0px;
+    right: 90px;
+    width:26px;
+    height: 34px;
+}
 
 .page-head__main-logo-common {
 	width: 1060px;
@@ -179,18 +195,22 @@ figure {
 	float: right;
 	display: flex;
 }
+.page-head__mainguide__detail li:hover {
+	background-color: #1f286f;
+}
 
 .page-head__mainguide__detail ul li {
 	list-style: none;
-	border: solid 1px #000066;
-	padding: 9px 10px 8px 10px;
-	width: 150px;
-	text-align: center;
+	width: 170px;
 }
 
 .page-head__mainguide__detail ul li a{
+	display: block;
 	color: #1f286f;
 	font-weight: bold;
+	padding: 9px 10px 8px 10px;
+	border: solid 1px #000066;
+	text-align: center;
 }
 
 .page-head__mainguide__detail ul li a:after {
@@ -205,10 +225,6 @@ figure {
 	line-height: 10px;
 }
 
-.page-head__mainguide__detail ul li:hover {
-	background-color: #1f286f;
-}
-
 .page-head__mainguide__detail ul li a:hover:after {
 	content:"";
 	display:inline-block;
@@ -221,9 +237,13 @@ figure {
 	line-height: 10px;
 }
 
-.page-head__mainguide__detail ul li a:hover {
+.page-head__mainguide__detail ul li a:hover	 {
 	color: #FFF;
 }
+
+
+
+
 
 .page-head__mainguide__detail:after{
 	content: "";
@@ -403,6 +423,7 @@ figure {
 	position:relative;
 }	
 #local-nav ul {
+width: 1060px;
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
@@ -1098,8 +1119,9 @@ figure {
 }
 
 .main-topic-12__common-1{
-	margin: 0 110px;
-	padding: 70px 10px 100px;
+	margin: 0 auto;
+    width: 1060px;
+    padding: 70px 10px 1px;
 	font-weight: 400;
 }
 
@@ -1333,11 +1355,19 @@ p.main-topic-20__detail {
 
 /* ここまでメインコンテンツ終わり3月13日 */
 .footer__main__contact-detail {
-	padding: 35px 10px 20px 10px;
+/* 	padding: 35px 10px 20px 10px; */
 	margin: 0;
 	background-image: url(../02_images/backgroundimages.png);
 	position: relative;
 }
+
+.footer__main__contact-detail-inner{
+	margin: 0 auto;
+	width: 1060px;
+	padding: 35px 10px 20px;
+}
+
+
 
 .footer__main__contact-detail  p {
 	margin: 0 0 30px 0;
@@ -1348,8 +1378,9 @@ p.main-topic-20__detail {
 }
 
 .footer__main__contact-detail ul {
-	padding:0 0 0 380px;
+	padding:0px;
 	margin: 0px;
+		width: 258px;
 }
 
 .footer__main__contact-detail:after {
@@ -1374,7 +1405,6 @@ p.main-topic-20__detail {
 	background-image: url(../02_images/icon_arrow01_right_black.png);
 	background-position: center right 10px;
 	background-repeat: no-repeat;
-	width: 258px;
     font-size: 18px;
  	display: flex; 
  	align-items: center;
@@ -1383,6 +1413,8 @@ p.main-topic-20__detail {
 
 .footer__main__contact-detail-1 {
 	margin: 0 auto;
+	width: 550px;
+	display: table;
 }
 .footer__main__contact-detail-1 li:hover{
 	background-color: rgba(192,192,192,0.9) ;	
@@ -1404,10 +1436,11 @@ p.main-topic-20__detail {
 
 .footer__main__contact-info {
 	float: right;
-	margin:0 auto;
+	width: 250px;
+	margin: 0 auto;
 	position: absolute;
 	top: 100px;
-	right: 280px;
+	right: 330px;
 }
 
 .footer__main__contact-info a{
@@ -1789,7 +1822,6 @@ ul .footer__sidebar__img {
 	font-size: 11px;
 	margin: 0;
 	padding: 0;
-	max-width: 1265px;
 }
 
 .footer__sub__nav__copyright-1 {
@@ -1797,7 +1829,7 @@ ul .footer__sidebar__img {
 	display: block;
 	clear: both;
 	margin: 0 auto;
-	width:1060px;
+	max-width:1060px;
 	padding: 18px 10px 16px;
 	position:relative;
 }
